# gds-tests

./: 010_WAVEGUIDES_v2025_Student.ipynb  020_COUPLERS_v2025_Student.ipynb  30_INTERFEROMETERS_v2025_STUDENTS_UPDATE.ipynb  40_Circuit_Tuning.ipynb  Bragg_Grating.ipynb  Bragg_Grating.py  README.md  install-tests.ipynb  pyproject.toml
