[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lab0-install"
version = "0.1.0"
description = "PIC Design tools installation test"
readme = "README.md"
requires-python = "~=3.12.0"
dependencies = [
    "gdsfactory==9.19.0",
    "gplugins[femwell,sax,tidy3d]~=2.0.0",
    "tidy3d",
    "scipy>=1.16.3",
    "pytz",
    "pyvisa>=1.16.1",
]
